src/test/ui/consts/dangling_raw_ptr.stderr
error: encountered dangling pointer in final constant
  --> $DIR/dangling_raw_ptr.rs:1:1
   |
LL | / const FOO: *const u32 = {
LL | |     let x = 42;
LL | |     &x
LL | | };
   | |__^

error: aborting due to previous error

